--- a/2_2d_laplace_eq_neuman_bc.ipynb
+++ b/2_2d_laplace_eq_neuman_bc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For each triangle in the mesh we need to compute the Jacobian of the transformation from global to local coordinates\n",
+    "# For each triangle in the mesh we need to compute the Jacobian of the map from global to local coordinates\n",
     "p1_ar = mesh.vertices[mesh.faces[:, 0]]\n",
     "p2_ar = mesh.vertices[mesh.faces[:, 1]]\n",
     "p3_ar = mesh.vertices[mesh.faces[:, 2]] \n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "[]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "[]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
