--- a/4_3d_heat_eq_neuman_bc.ipynb
+++ b/4_3d_heat_eq_neuman_bc.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.integrate import quad, dblquad\n",
-    "import vtk\n",
+    "import pyvista as pv\n",
+    "import meshio\n",
     "\n",
     "from scipy.sparse import csc_matrix\n",
     "from scipy.sparse.linalg import spsolve\n",
@@ -22,7 +23,7 @@
    "source": [
     "## Problem description\n",
     "\n",
-    "The goal is to solve the Heat equation with no flux boundary condition in 2D on a square domain using the finite element method.<br>\n",
+    "The goal is to solve the Heat equation with no flux boundary condition in 3D on the unit cube domain using the finite element method.<br>\n",
     "The strong form of the heat equation is given by:\n",
     "\n",
     "$ \\frac{\\partial u}{\\partial t} = c \\Delta u$ on $\\Omega$ <br>\n",
@@ -61,39 +62,18 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "To interpolate $u$ in our triangular elements, we will use a first order Lagrange basis function. \n",
     "The basis functions in the element are given by:\n",
     "\n",
-    "$\\phi_1(u,v,w) = u$\n",
+    "$\\phi_1(u,v) = u$\n",
     "\n",
-    "$\\phi_2(u,v,w) = v$\n",
+    "$\\phi_2(u,v) = v$\n",
     "\n",
-    "$\\phi_3(u,v,w) = w$\n",
+    "$\\phi_3(u,v) = 1-u-v$\n",
     "\n",
-    "$\\phi_4(u,v,w) = 1-u-v-w$\n",
-    "\n",
-    "Where $u$, $v$, and $w$ are the barycentric coordinates of a point in the element."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def basis_fn_1(u, v, w): return u\n",
-    "def basis_fn_2(u, v, w): return v\n",
-    "def basis_fn_3(u, v, w): return w\n",
-    "def basis_fn_4(u, v, w): return 1 - u - v - w\n",
-    "\n",
-    "grad_basis_fn_1 = np.array([1,   0,  0])\n",
-    "grad_basis_fn_2 = np.array([0,   1,  0])\n",
-    "grad_basis_fn_3 = np.array([0,   0,  1])\n",
-    "grad_basis_fn_4 = np.array([-1, -1, -1])\n",
-    "\n",
-    "basis_fn_lst = [basis_fn_1, basis_fn_2, basis_fn_3, basis_fn_4]\n",
-    "grad_basis_fn_lst = [grad_basis_fn_1, grad_basis_fn_2, grad_basis_fn_3, grad_basis_fn_4]\n",
-    "n_local_basis_fn = len(basis_fn_lst)"
+    "Where $u$, $v$, and $w=1-u-v$ are the barycentric coordinates of a point in the element."
    ]
   },
   {
@@ -102,107 +82,138 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1081,   -1],\n",
-       "       [1081,   -1],\n",
-       "       [1091,   -1],\n",
-       "       ...,\n",
-       "       [ 309,  363],\n",
-       "       [ 742,  821],\n",
-       "       [1138, 1139]])"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info    : Reading 'square.msh'...\n",
+      "Info    : 27 entities\n",
+      "Info    : 341 nodes\n",
+      "Info    : 1760 elements\n",
+      "Info    : Done reading 'square.msh'\n",
+      "Nodes:  [0.         0.         1.         ... 0.36290443 0.41001674 0.15666477]\n",
+      "Elements:  [array([ 2,  9,  9, 10, 10, 11, 11, 12, 12, 13, 13,  1,  1, 14, 14, 15, 15,\n",
+      "       16, 16, 17, 17, 18, 18,  3,  4, 19, 19, 20, 20, 21, 21, 22, 22, 23,\n",
+      "       23,  3,  2, 24, 24, 25, 25, 26, 26, 27, 27, 28, 28,  4,  6, 29, 29,\n",
+      "       30, 30, 31, 31, 32, 32, 33, 33,  5,  5, 34, 34, 35, 35, 36, 36, 37,\n",
+      "       37, 38, 38,  7,  8, 39, 39, 40, 40, 41, 41, 42, 42, 43, 43,  7,  6,\n",
+      "       44, 44, 45, 45, 46, 46, 47, 47, 48, 48,  8,  2, 49, 49, 50, 50, 51,\n",
+      "       51, 52, 52, 53, 53,  6,  1, 54, 54, 55, 55, 56, 56, 57, 57, 58, 58,\n",
+      "        5,  4, 59, 59, 60, 60, 61, 61, 62, 62, 63, 63,  8,  3, 64, 64, 65,\n",
+      "       65, 66, 66, 67, 67, 68, 68,  7], dtype=uint64), array([ 13,   1, 100, ..., 257, 265, 262], dtype=uint64), array([199, 181, 281, ..., 335, 320, 275], dtype=uint64), array([1, 2, 3, 4, 5, 6, 7, 8], dtype=uint64)]\n",
+      "node_ids:  [  1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17  18\n",
+      "  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36\n",
+      "  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54\n",
+      "  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72\n",
+      "  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90\n",
+      "  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107 108\n",
+      " 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126\n",
+      " 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144\n",
+      " 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162\n",
+      " 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180\n",
+      " 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198\n",
+      " 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216\n",
+      " 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234\n",
+      " 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252\n",
+      " 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270\n",
+      " 271 272 273 274 275 276 277 278 279 280 281 282 283 284 285 286 287 288\n",
+      " 289 290 291 292 293 294 295 296 297 298 299 300 301 302 303 304 305 306\n",
+      " 307 308 309 310 311 312 313 314 315 316 317 318 319 320 321 322 323 324\n",
+      " 325 326 327 328 329 330 331 332 333 334 335 336 337 338 339 340 341]\n",
+      "element_types:  [ 1  2  4 15]\n",
+      "element_tags:  [array([ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25,\n",
+      "       26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42,\n",
+      "       43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59,\n",
+      "       60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76,\n",
+      "       77, 78, 79, 80], dtype=uint64), array([ 81,  82,  83,  84,  85,  86,  87,  88,  89,  90,  91,  92,  93,\n",
+      "        94,  95,  96,  97,  98,  99, 100, 101, 102, 103, 104, 105, 106,\n",
+      "       107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119,\n",
+      "       120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132,\n",
+      "       133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145,\n",
+      "       146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158,\n",
+      "       159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171,\n",
+      "       172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184,\n",
+      "       185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197,\n",
+      "       198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210,\n",
+      "       211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223,\n",
+      "       224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236,\n",
+      "       237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249,\n",
+      "       250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262,\n",
+      "       263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275,\n",
+      "       276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 287, 288,\n",
+      "       289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299, 300, 301,\n",
+      "       302, 303, 304, 305, 306, 307, 308, 309, 310, 311, 312, 313, 314,\n",
+      "       315, 316, 317, 318, 319, 320, 321, 322, 323, 324, 325, 326, 327,\n",
+      "       328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338, 339, 340,\n",
+      "       341, 342, 343, 344, 345, 346, 347, 348, 349, 350, 351, 352, 353,\n",
+      "       354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366,\n",
+      "       367, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377, 378, 379,\n",
+      "       380, 381, 382, 383, 384, 385, 386, 387, 388, 389, 390, 391, 392,\n",
+      "       393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404, 405,\n",
+      "       406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418,\n",
+      "       419, 420, 421, 422, 423, 424, 425, 426, 427, 428, 429, 430, 431,\n",
+      "       432, 433, 434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444,\n",
+      "       445, 446, 447, 448, 449, 450, 451, 452, 453, 454, 455, 456, 457,\n",
+      "       458, 459, 460, 461, 462, 463, 464, 465, 466, 467, 468, 469, 470,\n",
+      "       471, 472, 473, 474, 475, 476, 477, 478, 479, 480, 481, 482, 483,\n",
+      "       484, 485, 486, 487, 488, 489, 490, 491, 492, 493, 494, 495, 496,\n",
+      "       497, 498, 499, 500, 501, 502, 503, 504, 505, 506, 507, 508, 509,\n",
+      "       510, 511, 512, 513, 514, 515, 516, 517, 518, 519, 520, 521, 522,\n",
+      "       523, 524, 525, 526, 527, 528, 529, 530, 531, 532, 533, 534, 535,\n",
+      "       536, 537, 538, 539, 540, 541, 542, 543, 544, 545, 546, 547, 548,\n",
+      "       549, 550, 551, 552, 553, 554, 555, 556, 557, 558, 559, 560, 561,\n",
+      "       562, 563, 564, 565, 566, 567, 568, 569, 570, 571, 572, 573, 574,\n",
+      "       575, 576, 577, 578, 579, 580, 581, 582, 583, 584, 585, 586, 587,\n",
+      "       588, 589, 590, 591, 592, 593, 594, 595, 596, 597, 598, 599, 600,\n",
+      "       601, 602, 603, 604, 605, 606, 607, 608, 609, 610, 611, 612, 613,\n",
+      "       614, 615, 616, 617, 618, 619, 620], dtype=uint64), array([ 621,  622,  623, ..., 1758, 1759, 1760], dtype=uint64), array([1, 2, 3, 4, 5, 6, 7, 8], dtype=uint64)]\n"
+     ]
     }
    ],
    "source": [
-    "reader = vtk.vtkUnstructuredGridReader()\n",
-    "reader.SetFileName(\"tetrahedralized_cube.vtk\")\n",
-    "reader.Update()\n",
-    "u_grid = reader.GetOutput()\n",
+    "import gmsh\n",
     "\n",
-    "#Collect the positions of the nodes\n",
-    "n_nodes = u_grid.GetNumberOfPoints()\n",
-    "node_lst = [u_grid.GetPoint(i) for i in range(n_nodes)]\n",
-    "node_ar = np.array(node_lst)\n",
+    "# Initialize Gmsh API\n",
+    "gmsh.initialize()\n",
     "\n",
-    "#Loop over the cells \n",
-    "tetra_lst = []\n",
+    "# Open the .msh file\n",
+    "gmsh.open(\"square.msh\")\n",
     "\n",
-    "for cell_id in range(u_grid.GetNumberOfCells()):\n",
-    "    cell = u_grid.GetCell(cell_id)\n",
-    "    n_cell_pts = cell.GetNumberOfPoints()\n",
+    "# Retrieve nodes and elements\n",
+    "nodes = gmsh.model.mesh.getNodes()\n",
+    "elements = gmsh.model.mesh.getElements()\n",
     "\n",
-    "    if n_cell_pts == 4:\n",
+    "# Access nodes (coordinates) and elements (connectivity)\n",
+    "node_ids, node_coords, _ = nodes         # node_ids, node_coords arrays\n",
+    "element_types, element_tags, element_nodes = elements\n",
     "\n",
-    "        cell_pts = [cell.GetPointId(i) for i in range(n_cell_pts)]\n",
-    "        tetra_lst.append(cell_pts)\n",
+    "# Close the Gmsh session\n",
+    "gmsh.finalize()\n",
     "\n",
     "\n",
-    "tetra_ar = np.array(tetra_lst)\n",
-    "face_lst = []\n",
+    "print(\"Nodes: \", node_coords.shape)\n",
+    "print(\"Elements: \", element_nodes)\n",
+    "print(\"node_ids: \", node_ids)\n",
+    "print(\"element_types: \", element_types)\n",
+    "print(\"element_tags: \", element_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def basis_fn_1(u, v): return u\n",
+    "def basis_fn_2(u, v): return v\n",
+    "def basis_fn_3(u, v): return 1 - u - v\n",
     "\n",
+    "grad_basis_fn_1 = np.array([1, 0])\n",
+    "grad_basis_fn_2 = np.array([0, 1])\n",
+    "grad_basis_fn_3 = np.array([-1, -1])\n",
     "\n",
-    "#Loop over the cells\n",
-    "for i, tetra in enumerate(tetra_lst):\n",
-    "\n",
-    "    #Add the faces to the face list\n",
-    "    face_lst.append([i] + [tetra[0], tetra[1], tetra[2]])\n",
-    "    face_lst.append([i] + [tetra[0], tetra[1], tetra[3]])\n",
-    "    face_lst.append([i] + [tetra[0], tetra[2], tetra[3]])\n",
-    "    face_lst.append([i] + [tetra[1], tetra[2], tetra[3]])\n",
-    "\n",
-    "face_ar = np.array(face_lst)\n",
-    "\n",
-    "# Create a hash for each face\n",
-    "face_ar_sorted = np.sort(face_ar[:, 1:], axis=1)\n",
-    "face_hash_ar = face_ar_sorted[:, 0] * (n_nodes + 1) ** 2 + face_ar_sorted[:, 1] * (n_nodes + 1) + face_ar_sorted[:, 2]\n",
-    "\n",
-    "# Find the position of the duplicated hashes in the array\n",
-    "unique_face_hash_ar, unique_face_hash_ar_idx = np.unique(face_hash_ar, return_index=True)\n",
-    "\n",
-    "#Loop over the hash values and check at which index they are duplicated\n",
-    "face_hash_dic = {}\n",
-    "for i, hash_val in enumerate(face_hash_ar):\n",
-    "    if hash_val in face_hash_dic:\n",
-    "        face_hash_dic[hash_val].append(i)\n",
-    "    else:\n",
-    "        face_hash_dic[hash_val] = [i]\n",
-    "\n",
-    "\n",
-    "# Create a list of unique faces\n",
-    "unique_hash, unique_hash_idx = np.unique(face_hash_ar, return_index=True)\n",
-    "unique_face_ar = face_ar[unique_hash_idx][:, 1:]\n",
-    "\n",
-    "#Sort the unique faces\n",
-    "sorted_unique_face_ar = np.sort(unique_face_ar, axis=1)\n",
-    "\n",
-    "# Create a map between the hash value of a face and the index of the face in the unique_face_ar\n",
-    "hash_to_unique_face_idx_map = dict([(f[0] * (n_nodes + 1) ** 2 + f[1] * (n_nodes + 1) + f[2], i) for i, f in enumerate(sorted_unique_face_ar)])\n",
-    "\n",
-    "\n",
-    "# Now we create a new array that stores for each face, the indices of the tetrahedra sharing that face\n",
-    "face_tetra_ar = np.zeros((len(unique_face_ar), 2), dtype=int)\n",
-    "face_tetra_ar[:] = -1\n",
-    "\n",
-    "\n",
-    "for face_hash, duplicate_index in face_hash_dic.items():\n",
-    "    assert len(duplicate_index) == 2 or len(duplicate_index) == 1\n",
-    "\n",
-    "    #Get the index of the face in the list of unique faces\n",
-    "    unique_face_index = hash_to_unique_face_idx_map[face_hash]\n",
-    "\n",
-    "    tetra_0 = face_ar[duplicate_index[0]][0]\n",
-    "    face_tetra_ar[unique_face_index, 0] = tetra_0\n",
-    "\n",
-    "    # If the face is on the boundary it will only have one tetrahedron\n",
-    "    if len(duplicate_index) == 2:\n",
-    "        tetra_1 = face_ar[duplicate_index[1]][0]\n",
-    "        face_tetra_ar[unique_face_index, 1] = tetra_1\n",
-    "    "
+    "basis_fn_lst = [basis_fn_1, basis_fn_2, basis_fn_3]\n",
+    "grad_basis_fn_lst = [grad_basis_fn_1, grad_basis_fn_2, grad_basis_fn_3]\n",
+    "n_local_basis_fn = len(basis_fn_lst)"
    ]
   },
   {
