progress on the 3D fem implemetation

--- a/3_3d_heat_eq_neuman_bc.ipynb
+++ b/3_3d_heat_eq_neuman_bc.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.integrate import quad, dblquad\n",
-    "import vtk\n",
+    "import trimesh as tm\n",
     "\n",
     "from scipy.sparse import csc_matrix\n",
     "from scipy.sparse.linalg import spsolve\n",
@@ -22,7 +22,7 @@
    "source": [
     "## Problem description\n",
     "\n",
-    "The goal is to solve the Heat equation with no flux boundary condition in 2D on a square domain using the finite element method.<br>\n",
+    "The goal is to solve the Heat equation with no flux boundary condition in 3D on the unit cube domain using the finite element method.<br>\n",
     "The strong form of the heat equation is given by:\n",
     "\n",
     "$ \\frac{\\partial u}{\\partial t} = c \\Delta u$ on $\\Omega$ <br>\n",
@@ -61,153 +61,100 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "To interpolate $u$ in our triangular elements, we will use a first order Lagrange basis function. \n",
     "The basis functions in the element are given by:\n",
     "\n",
-    "$\\phi_1(u,v,w) = u$\n",
+    "$\\phi_1(u,v) = u$\n",
     "\n",
-    "$\\phi_2(u,v,w) = v$\n",
+    "$\\phi_2(u,v) = v$\n",
     "\n",
-    "$\\phi_3(u,v,w) = w$\n",
+    "$\\phi_3(u,v) = 1-u-v$\n",
     "\n",
-    "$\\phi_4(u,v,w) = 1-u-v-w$\n",
-    "\n",
-    "Where $u$, $v$, and $w$ are the barycentric coordinates of a point in the element."
+    "Where $u$, $v$, and $w=1-u-v$ are the barycentric coordinates of a point in the element."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def basis_fn_1(u, v, w): return u\n",
-    "def basis_fn_2(u, v, w): return v\n",
-    "def basis_fn_3(u, v, w): return w\n",
-    "def basis_fn_4(u, v, w): return 1 - u - v - w\n",
+    "def basis_fn_1(u, v): return u\n",
+    "def basis_fn_2(u, v): return v\n",
+    "def basis_fn_3(u, v): return 1 - u - v\n",
     "\n",
-    "grad_basis_fn_1 = np.array([1,   0,  0])\n",
-    "grad_basis_fn_2 = np.array([0,   1,  0])\n",
-    "grad_basis_fn_3 = np.array([0,   0,  1])\n",
-    "grad_basis_fn_4 = np.array([-1, -1, -1])\n",
+    "grad_basis_fn_1 = np.array([1, 0])\n",
+    "grad_basis_fn_2 = np.array([0, 1])\n",
+    "grad_basis_fn_3 = np.array([-1, -1])\n",
     "\n",
-    "basis_fn_lst = [basis_fn_1, basis_fn_2, basis_fn_3, basis_fn_4]\n",
-    "grad_basis_fn_lst = [grad_basis_fn_1, grad_basis_fn_2, grad_basis_fn_3, grad_basis_fn_4]\n",
+    "basis_fn_lst = [basis_fn_1, basis_fn_2, basis_fn_3]\n",
+    "grad_basis_fn_lst = [grad_basis_fn_1, grad_basis_fn_2, grad_basis_fn_3]\n",
     "n_local_basis_fn = len(basis_fn_lst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1081,   -1],\n",
-       "       [1081,   -1],\n",
-       "       [1091,   -1],\n",
-       "       ...,\n",
-       "       [ 309,  363],\n",
-       "       [ 742,  821],\n",
-       "       [1138, 1139]])"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reader = vtk.vtkUnstructuredGridReader()\n",
-    "reader.SetFileName(\"tetrahedralized_cube.vtk\")\n",
-    "reader.Update()\n",
-    "u_grid = reader.GetOutput()\n",
+    "#Load the square triangulated mesh\n",
+    "mesh = tm.load_mesh('unstructured_square.obj')\n",
     "\n",
-    "#Collect the positions of the nodes\n",
-    "n_nodes = u_grid.GetNumberOfPoints()\n",
-    "node_lst = [u_grid.GetPoint(i) for i in range(n_nodes)]\n",
-    "node_ar = np.array(node_lst)\n",
+    "#Make sure that the origin of the mesh is 0,0\n",
+    "mesh.vertices -= mesh.vertices.min(axis=0)\n",
     "\n",
-    "#Loop over the cells \n",
-    "tetra_lst = []\n",
+    "#Remove the z coordinate\n",
+    "mesh.vertices = mesh.vertices[:, :2]\n",
     "\n",
-    "for cell_id in range(u_grid.GetNumberOfCells()):\n",
-    "    cell = u_grid.GetCell(cell_id)\n",
-    "    n_cell_pts = cell.GetNumberOfPoints()\n",
+    "#Get the edges located at the boundary of the mesh\n",
+    "mesh.boundary_edges = mesh.edges[tm.grouping.group_rows(mesh.edges_sorted, require_count=1)]\n",
     "\n",
-    "    if n_cell_pts == 4:\n",
+    "#Get the vertices located at the boundary of the mesh\n",
+    "mesh.boundary_vertices_idx = np.unique(mesh.boundary_edges)\n",
     "\n",
-    "        cell_pts = [cell.GetPointId(i) for i in range(n_cell_pts)]\n",
-    "        tetra_lst.append(cell_pts)\n",
+    "#Create a unique idx for each edge and relate it to the position of the edge in the mesh.edges_unique array.\n",
+    "mesh.unique_idx_to_edge_idx = {\n",
+    "    tuple(sorted(v)): i for i, v in enumerate(mesh.edges_unique)\n",
+    "}\n",
+    "\n",
+    "n_vertices = len(mesh.vertices)\n",
+    "n_faces = len(mesh.faces)\n",
+    "n_edges = len(mesh.edges_unique)\n",
+    "n_boundary_vertices = len(mesh.boundary_vertices_idx)\n",
+    "\n",
+    "# For each edge we want to know the two faces that share the edge\n",
+    "edge_face_ar = np.zeros((n_edges, 2), dtype=np.int32)\n",
+    "edge_face_ar.fill(-1)\n",
+    "\n",
+    "for face_id, face in enumerate(mesh.faces):\n",
+    "\n",
+    "    e1_idx = mesh.unique_idx_to_edge_idx[tuple(sorted(face[[0, 1]]))]\n",
+    "    e2_idx = mesh.unique_idx_to_edge_idx[tuple(sorted(face[[1, 2]]))]\n",
+    "    e3_idx = mesh.unique_idx_to_edge_idx[tuple(sorted(face[[2, 0]]))]\n",
     "\n",
     "\n",
-    "tetra_ar = np.array(tetra_lst)\n",
-    "face_lst = []\n",
-    "\n",
-    "\n",
-    "#Loop over the cells\n",
-    "for i, tetra in enumerate(tetra_lst):\n",
-    "\n",
-    "    #Add the faces to the face list\n",
-    "    face_lst.append([i] + [tetra[0], tetra[1], tetra[2]])\n",
-    "    face_lst.append([i] + [tetra[0], tetra[1], tetra[3]])\n",
-    "    face_lst.append([i] + [tetra[0], tetra[2], tetra[3]])\n",
-    "    face_lst.append([i] + [tetra[1], tetra[2], tetra[3]])\n",
-    "\n",
-    "face_ar = np.array(face_lst)\n",
-    "\n",
-    "# Create a hash for each face\n",
-    "face_ar_sorted = np.sort(face_ar[:, 1:], axis=1)\n",
-    "face_hash_ar = face_ar_sorted[:, 0] * (n_nodes + 1) ** 2 + face_ar_sorted[:, 1] * (n_nodes + 1) + face_ar_sorted[:, 2]\n",
-    "\n",
-    "# Find the position of the duplicated hashes in the array\n",
-    "unique_face_hash_ar, unique_face_hash_ar_idx = np.unique(face_hash_ar, return_index=True)\n",
-    "\n",
-    "#Loop over the hash values and check at which index they are duplicated\n",
-    "face_hash_dic = {}\n",
-    "for i, hash_val in enumerate(face_hash_ar):\n",
-    "    if hash_val in face_hash_dic:\n",
-    "        face_hash_dic[hash_val].append(i)\n",
+    "    if edge_face_ar[e1_idx, 0] == -1:\n",
+    "        edge_face_ar[e1_idx, 0] = face_id\n",
     "    else:\n",
-    "        face_hash_dic[hash_val] = [i]\n",
+    "        edge_face_ar[e1_idx, 1] = face_id\n",
     "\n",
+    "    if edge_face_ar[e2_idx, 0] == -1:\n",
+    "        edge_face_ar[e2_idx, 0] = face_id\n",
+    "    else:\n",
+    "        edge_face_ar[e2_idx, 1] = face_id\n",
     "\n",
-    "# Create a list of unique faces\n",
-    "unique_hash, unique_hash_idx = np.unique(face_hash_ar, return_index=True)\n",
-    "unique_face_ar = face_ar[unique_hash_idx][:, 1:]\n",
-    "\n",
-    "#Sort the unique faces\n",
-    "sorted_unique_face_ar = np.sort(unique_face_ar, axis=1)\n",
-    "\n",
-    "# Create a map between the hash value of a face and the index of the face in the unique_face_ar\n",
-    "hash_to_unique_face_idx_map = dict([(f[0] * (n_nodes + 1) ** 2 + f[1] * (n_nodes + 1) + f[2], i) for i, f in enumerate(sorted_unique_face_ar)])\n",
-    "\n",
-    "\n",
-    "# Now we create a new array that stores for each face, the indices of the tetrahedra sharing that face\n",
-    "face_tetra_ar = np.zeros((len(unique_face_ar), 2), dtype=int)\n",
-    "face_tetra_ar[:] = -1\n",
-    "\n",
-    "\n",
-    "for face_hash, duplicate_index in face_hash_dic.items():\n",
-    "    assert len(duplicate_index) == 2 or len(duplicate_index) == 1\n",
-    "\n",
-    "    #Get the index of the face in the list of unique faces\n",
-    "    unique_face_index = hash_to_unique_face_idx_map[face_hash]\n",
-    "\n",
-    "    tetra_0 = face_ar[duplicate_index[0]][0]\n",
-    "    face_tetra_ar[unique_face_index, 0] = tetra_0\n",
-    "\n",
-    "    # If the face is on the boundary it will only have one tetrahedron\n",
-    "    if len(duplicate_index) == 2:\n",
-    "        tetra_1 = face_ar[duplicate_index[1]][0]\n",
-    "        face_tetra_ar[unique_face_index, 1] = tetra_1\n",
-    "    "
+    "    if edge_face_ar[e3_idx, 0] == -1:\n",
+    "        edge_face_ar[e3_idx, 0] = face_id\n",
+    "    else:\n",
+    "        edge_face_ar[e3_idx, 1] = face_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(270, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# For each triangle in the mesh we need to compute the Jacobian of the map from global to local coordinates\n",
     "p1_ar = mesh.vertices[mesh.faces[:, 0]]\n",
@@ -255,6 +210,7 @@
     "\n",
     "#This list stores the product of the gradient of the basis functions with the inverse of the Jacobian\n",
     "grad_basis_fn_inv_jacobian_lst = [np.dot(inv_jacobian_ar, grad_basis_fn_lst[i]) for i in range(n_local_basis_fn)]\n",
+    "\n",
     "\n",
     "#Now we compute the local mass matrix for each triangle\n",
     "local_stiffness_matrix_ar   = np.zeros((n_faces, n_local_basis_fn, n_local_basis_fn))\n",
@@ -289,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +297,7 @@
        "[]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -371,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +336,7 @@
        "[]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -407,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +372,7 @@
        "Text(0.5, 1.0, 'Absolute error')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -442,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +407,7 @@
        "Text(0.5, 1.0, 'Relative error (%)')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
