--- a/1_2d_laplace_eq_dirichlet_bc.ipynb
+++ b/1_2d_laplace_eq_dirichlet_bc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "`ptp` was removed from the ndarray class in NumPy 2.0. Use np.ptp(arr, ...) instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Load the square triangulated mesh\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m mesh \u001b[38;5;241m=\u001b[39m \u001b[43mtm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_mesh\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43munstructured_square.obj\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#Make sure that the origin of the mesh is 0,0\u001b[39;00m\n\u001b[1;32m      5\u001b[0m mesh\u001b[38;5;241m.\u001b[39mvertices \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m mesh\u001b[38;5;241m.\u001b[39mvertices\u001b[38;5;241m.\u001b[39mmin(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/Miscellaneous/FEM/fem_env/lib/python3.10/site-packages/trimesh/exchange/load.py:209\u001b[0m, in \u001b[0;36mload_mesh\u001b[0;34m(file_obj, file_type, resolver, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m result \u001b[38;5;129;01min\u001b[39;00m results:\n\u001b[1;32m    208\u001b[0m     kwargs\u001b[38;5;241m.\u001b[39mupdate(result)\n\u001b[0;32m--> 209\u001b[0m     loaded\u001b[38;5;241m.\u001b[39mappend(\u001b[43mload_kwargs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    210\u001b[0m     loaded[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mmetadata\u001b[38;5;241m.\u001b[39mupdate(metadata)\n\u001b[1;32m    212\u001b[0m \u001b[38;5;66;03m# todo : remove this\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/Miscellaneous/FEM/fem_env/lib/python3.10/site-packages/trimesh/exchange/load.py:503\u001b[0m, in \u001b[0;36mload_kwargs\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    500\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    501\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munable to determine type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkwargs\u001b[38;5;241m.\u001b[39mkeys()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 503\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mhandler\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Miscellaneous/FEM/fem_env/lib/python3.10/site-packages/trimesh/exchange/load.py:448\u001b[0m, in \u001b[0;36mload_kwargs.<locals>.handle_mesh\u001b[0;34m()\u001b[0m\n\u001b[1;32m    446\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Trimesh(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmisc\u001b[38;5;241m.\u001b[39mload_dict(kwargs))\n\u001b[1;32m    447\u001b[0m \u001b[38;5;66;03m# otherwise just load that puppy\u001b[39;00m\n\u001b[0;32m--> 448\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mTrimesh\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Miscellaneous/FEM/fem_env/lib/python3.10/site-packages/trimesh/base.py:167\u001b[0m, in \u001b[0;36mTrimesh.__init__\u001b[0;34m(self, vertices, faces, face_normals, vertex_normals, face_colors, vertex_colors, face_attributes, vertex_attributes, metadata, process, validate, merge_tex, merge_norm, use_embree, initial_cache, visual, **kwargs)\u001b[0m\n\u001b[1;32m    165\u001b[0m \u001b[38;5;66;03m# (n, 3) float of vertex normals, can be created from face normals\u001b[39;00m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m vertex_normals \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 167\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvertex_normals\u001b[49m \u001b[38;5;241m=\u001b[39m vertex_normals\n\u001b[1;32m    169\u001b[0m \u001b[38;5;66;03m# embree is a much, much faster raytracer written by Intel\u001b[39;00m\n\u001b[1;32m    170\u001b[0m \u001b[38;5;66;03m# if you have pyembree installed you should use it\u001b[39;00m\n\u001b[1;32m    171\u001b[0m \u001b[38;5;66;03m# although both raytracers were designed to have a common API\u001b[39;00m\n\u001b[1;32m    172\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ray\u001b[38;5;241m.\u001b[39mhas_embree \u001b[38;5;129;01mand\u001b[39;00m use_embree:\n",
+      "File \u001b[0;32m~/Documents/Miscellaneous/FEM/fem_env/lib/python3.10/site-packages/trimesh/base.py:506\u001b[0m, in \u001b[0;36mTrimesh.vertex_normals\u001b[0;34m(self, values)\u001b[0m\n\u001b[1;32m    503\u001b[0m values \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masanyarray(values, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m\"\u001b[39m, dtype\u001b[38;5;241m=\u001b[39mfloat64)\n\u001b[1;32m    504\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m values\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvertices\u001b[38;5;241m.\u001b[39mshape:\n\u001b[1;32m    505\u001b[0m     \u001b[38;5;66;03m# check to see if they assigned all zeros\u001b[39;00m\n\u001b[0;32m--> 506\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mvalues\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mptp\u001b[49m() \u001b[38;5;241m<\u001b[39m tol\u001b[38;5;241m.\u001b[39mmerge:\n\u001b[1;32m    507\u001b[0m         log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvertex_normals are all zero!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    508\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_cache[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvertex_normals\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m values\n",
+      "\u001b[0;31mAttributeError\u001b[0m: `ptp` was removed from the ndarray class in NumPy 2.0. Use np.ptp(arr, ...) instead."
+     ]
+    }
+   ],
    "source": [
     "#Load the square triangulated mesh\n",
     "mesh = tm.load_mesh('unstructured_square.obj')\n",
