refine potential energy section and clarify traction force equations in 3D linear elastic solid

--- a/5_3d_linear_elastic_solid.ipynb
+++ b/5_3d_linear_elastic_solid.ipynb
@@ -327,13 +327,13 @@
     "\n",
     "---\n",
     "\n",
-    "## Potential energy\n",
+    "## Potential energy: Strain Density Energy\n",
     "\n",
     "The potential energy of the system in Lagrangian form is given by:\n",
     "\n",
     "$$\n",
     "V = \\sum_{i=1}^{N} \\frac{1}{2} \\int_{\\Omega_{i,0}} \\Psi(\\mathrm{E}) \\; d\\Omega_{i,0} - \\int_{\\Omega_{i,0}} f \\cdot u \\; d\\Omega_{i,0} \n",
-    "- \\int_{\\partial \\Omega_{i,0}} t \\cdot u \\; d\\Gamma_{i,0}\n",
+    "- \\int_{\\partial \\Omega_{i,0}} t \\cdot u \\; d\\partial \\Omega_{i,0}\n",
     "$$ \n",
     "\n",
     "$\\Psi$ and $E$ are respectively the strain energy density function and the Green-Lagrange strain tensor of the system. $f$ is the body force acting on the system and $t$ is the traction force acting on the system. $u$ is the displacement field of the system.\n",
@@ -377,18 +377,18 @@
     "\\lambda + 2 \\mu & \\lambda & \\lambda & 0 & 0 & 0 \\\\\n",
     "\\lambda & \\lambda + 2 \\mu & \\lambda & 0 & 0 & 0 \\\\\n",
     "\\lambda & \\lambda & \\lambda + 2 \\mu & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 2\\mu & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 2\\mu & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 & 2\\mu \\\\\n",
+    "0 & 0 & 0 & \\mu & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & \\mu & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & \\mu \\\\\n",
     "\\end{bmatrix}}_{= \\mathrm{C} \\; (6 \\times 6)}\n",
     "\n",
     "\\begin{bmatrix}\n",
     "E_{11} \\\\\n",
     "E_{22} \\\\\n",
     "E_{33} \\\\\n",
-    "E_{12} \\\\\n",
-    "E_{23} \\\\\n",
-    "E_{13} \\\\\n",
+    "2 E_{12} \\\\\n",
+    "2 E_{23} \\\\\n",
+    "2 E_{13} \\\\\n",
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
@@ -406,7 +406,7 @@
     "\\Psi(\\mathrm{E}) = \\frac{1}{2} \\mathrm{S} : \\mathrm{E} = \\frac{1}{2} \\vec{\\mathrm{E}}^T \\mathrm{C} \\vec{\\mathrm{E}}\n",
     "$$\n",
     "\n",
-    "The element of the strain tensor can be obtained directly from the derivative of the displacement field:\n",
+    "In the limit of small strain: $\\mathrm{E} \\approx \\frac{1}{2}(\\nabla_X u + \\nabla_X u^T)$, the element of the strain tensor can directly be obtained from the derivative of the displacement field:\n",
     "$$\n",
     "\\begin{align}\n",
     "E_{11} &= \\frac{\\partial u_1}{\\partial X_1} \\\\\n",
@@ -424,9 +424,9 @@
     "E_{11} \\\\\n",
     "E_{22} \\\\\n",
     "E_{33} \\\\\n",
-    "E_{12} \\\\\n",
-    "E_{23} \\\\\n",
-    "E_{13} \\\\\n",
+    "2 E_{12} \\\\\n",
+    "2 E_{23} \\\\\n",
+    "2 E_{13} \\\\\n",
     "\\end{bmatrix} =\n",
     "\n",
     "\\underbrace{\n",
@@ -464,9 +464,9 @@
     "E_{11} \\\\\n",
     "E_{22} \\\\\n",
     "E_{33} \\\\\n",
-    "E_{12} \\\\\n",
-    "E_{23} \\\\\n",
-    "E_{13} \\\\\n",
+    "2 E_{12} \\\\\n",
+    "2 E_{23} \\\\\n",
+    "2 E_{13} \\\\\n",
     "\\end{bmatrix} = B \\; N(X) \\; u(t) = \n",
     "\n",
     "\\underbrace{\n",
@@ -528,7 +528,149 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Potential energy: Body and Traction Forces\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Body forces\n",
+    "\n",
+    "The body forces applied to an element of the mesh (gravity, etc.) will be given with respect to the deformed configuration:\n",
+    "$$\n",
+    "\\int_{\\Omega_{i}} \\rho g^T \\cdot u(x,t) \\; d\\Omega_{i}\n",
+    "$$\n",
+    "\n",
+    "Where $\\rho$ is the density of the material and $g$ is the acceleration due to gravity. Even though the gravity is constant throughout the element, \n",
+    "the density between the deformed and reference configuration might not be the same. Because of the conservation of mass, we have that:\n",
+    "$$\n",
+    "\\int_{\\Omega_{i}} \\rho g^T \\cdot u(x,t) \\; d\\Omega_{i} = \\int_{\\Omega_{i,0}} \\rho_0 g^T \\cdot u(X,t) \\; d\\Omega_{i,0} \n",
+    "$$\n",
+    "\n",
+    "Since $u(X,t) = N(X) u(t)$, we can write the above equation as:\n",
+    "$$\n",
+    "\\int_{\\Omega_{i,0}} \\rho_0 g^T \\cdot u(X,t) \\; d\\Omega_{i,0} = \\rho_0 g^T  \\int_{\\Omega_{i,0}} \n",
+    "\\underbrace{\n",
+    "\\begin{bmatrix}\n",
+    " & & & \\\\\n",
+    "\\mathrm{I}\\phi_0(X) & \\mathrm{I}\\phi_1(X) & \\mathrm{I}\\phi_2(X) & \\mathrm{I}\\phi_3(X)\\\\\n",
+    " & & & \\\\\n",
+    "\\end{bmatrix}}_{= N(X) \\; (3 \\times 12)}  \\; d\\Omega_{i,0}\n",
+    "\\; \\underbrace{\n",
+    "\\begin{bmatrix}\n",
+    "\\mid \\\\\n",
+    "u_0(t) \\\\\n",
+    "\\mid \\\\\n",
+    " \\\\\n",
+    "\\mid\\\\\n",
+    "u_1(t) \\\\\n",
+    "\\mid \\\\\n",
+    "... \\\\\n",
+    "\\end{bmatrix}}_{=u(t) \\; (12 \\times 1)}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Since all the calculation are run wrt the reference configuration, the inetgral in the above equation only has to be computed once at the beginning of the simulation. \n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### Traction forces\n",
+    "\n",
+    "The traction forces are given by the following surface integral:\n",
+    "$$\n",
+    "\\int_{\\partial \\Omega_{i}} t^T u \\; d\\partial \\Omega_{i}\n",
+    "$$\n",
+    "\n",
+    "The traction forces are given with respect to the world/deformed configuration. Since, we are solving for the displacement with respect to the reference configuration, we need to transform the traction forces to the reference configuration. We first need to rotate the traction forces with respect to the axis orthogonal to the normals in the deformed and reference configuration. The rotation matrix is given by the Rodrigues formula:\n",
+    "$$\n",
+    "R = \\mathrm{I} + \\sin(\\theta) \\times \\mathrm{K} + (1 - \\cos(\\theta)) \\times \\mathrm{K}^2\n",
+    "$$\n",
+    "\n",
+    "With: \n",
+    "$$\n",
+    "K = \n",
+    "\\begin{bmatrix}\n",
+    "0 & -k_z & k_y \\\\\n",
+    "k_z & 0 & -k_x \\\\\n",
+    "-k_y & k_x & 0 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$ \n",
+    "\n",
+    "$ k = n \\times N$ and $\\theta = \\arccos(n \\cdot N)$, where $n$ is the unit normal in the deformed configuration and $N$ is the unit normal in the reference configuration. The traction forces then need to be rescaled based on the difference in area between the deformed ($a$) and reference ($A$) configuration. The traction forces in the reference configuration are then given by:\n",
+    "$$\n",
+    "\\int_{\\partial \\Omega_{i}} t^T  u \\; d\\partial \\Omega_{i} = \\frac{a}{A} \\int_{\\partial \\Omega_{i,0}} t^T R^T  u(X,t) \\; d\\partial \\Omega_{i,0}\n",
+    "$$\n",
+    "\n",
+    "Since the normals and traction vectors are constant accross the surface triangles, the integral can be rewritten as: \n",
+    "$$\n",
+    "\\frac{a}{A} \\int_{\\partial \\Omega_{i,0}} t^T R^T  u(X,t) \\; d\\partial \\Omega_{i,0} =  \\frac{a}{A}  t^T R^T  \\int_{\\partial \\Omega_{i,0}} \\underbrace{\n",
+    "\\begin{bmatrix}\n",
+    " & & & \\\\\n",
+    "\\mathrm{I}\\phi_0(X) & \\mathrm{I}\\phi_1(X) & \\mathrm{I}\\phi_2(X) & \\mathrm{I}\\phi_3(X)\\\\\n",
+    " & & & \\\\\n",
+    "\\end{bmatrix}}_{= N(X) \\; (3 \\times 12)}\n",
+    "\\; d\\partial \\Omega_{i,0}\n",
+    "\n",
+    "\\;\n",
+    "\n",
+    "\\underbrace{\n",
+    "\\begin{bmatrix}\n",
+    "\\mid \\\\\n",
+    "u_0(t) \\\\\n",
+    "\\mid \\\\\n",
+    " \\\\\n",
+    "\\mid\\\\\n",
+    "u_1(t) \\\\\n",
+    "\\mid \\\\\n",
+    "... \\\\\n",
+    "\\end{bmatrix}}_{=u(t) \\; (12 \\times 1)}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Derivation of the equations of motion\n",
+    "\n",
+    "We now need to solve the Euler-Lagrange equations to find the displacement field of the system. The Euler-Lagrange equations are given by:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dt} \\left( \\frac{\\partial L}{\\partial \\dot{u}} \\right) - \\frac{\\partial L}{\\partial u} = 0\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
