Added global stiffness matrix

--- a/5_3d_linear_elastic_solid.ipynb
+++ b/5_3d_linear_elastic_solid.ipynb
@@ -571,7 +571,7 @@
     "# Now compute the local mass matrix for each cell\n",
     "local_mass_matrix_ar  = np.zeros((n_cells, n_local_basis_fn, n_local_basis_fn))\n",
     "\n",
-    "#Compute the local stiffness and mass matrices\n",
+    "#Compute the local mass matrices\n",
     "for i in range(n_local_basis_fn):\n",
     "    for j in range(i, n_local_basis_fn):\n",
     " \n",
@@ -584,7 +584,7 @@
     "density_ar = np.ones(n_cells)\n",
     "local_mass_matrix_ar = local_mass_matrix_ar * density_ar[:, np.newaxis, np.newaxis]\n",
     "\n",
-    "#Now we need to assemble the global stiffness matrix\n",
+    "#Now we need to assemble the global mass matrix\n",
     "row_id = np.repeat(cell_ar, n_local_basis_fn).flatten()\n",
     "col_id = np.tile(cell_ar,   n_local_basis_fn).flatten()\n",
     "mass_data = local_mass_matrix_ar.flatten()\n",
@@ -595,7 +595,7 @@
     "col_id = np.column_stack([col_id*3, col_id*3 + 1, col_id*3 + 2]).flatten()\n",
     "mass_data = np.repeat(mass_data, 3)\n",
     "\n",
-    "# Create the sparse global stiffness matrix\n",
+    "# Create the sparse global mass matrix\n",
     "global_mass_matrix = csc_matrix((mass_data.flatten(), (row_id, col_id)), shape=(n_vertices*3, n_vertices*3))\n",
     "global_mass_matrix.sum_duplicates()"
    ]
@@ -830,17 +830,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.690623230707898e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start by instantiating the poisson ratio and the young modulus of our elastic solid\n",
     "poisson_ratio = 0.3\n",
@@ -869,14 +861,17 @@
     "sigma_matrix[:, 0,3 ] = D[:, 1,0]\n",
     "sigma_matrix[:, 0,6 ] = D[:, 2,0]\n",
     "sigma_matrix[:, 0,9 ] = D[:, 3,0]\n",
+    "\n",
     "sigma_matrix[:, 1,1 ] = D[:, 0,1]\n",
     "sigma_matrix[:, 1,4 ] = D[:, 1,1]\n",
     "sigma_matrix[:, 1,7 ] = D[:, 2,1]\n",
     "sigma_matrix[:, 1,10] = D[:, 3,1]\n",
+    "\n",
     "sigma_matrix[:, 2,2 ] = D[:, 0,2]\n",
     "sigma_matrix[:, 2,5 ] = D[:, 1,2]\n",
     "sigma_matrix[:, 2,8 ] = D[:, 2,2]\n",
     "sigma_matrix[:, 2,11] = D[:, 3,2]\n",
+    "\n",
     "sigma_matrix[:, 3,0 ] = D[:, 0,1]\n",
     "sigma_matrix[:, 3,1 ] = D[:, 0,0]\n",
     "sigma_matrix[:, 3,3 ] = D[:, 1,1]\n",
@@ -885,6 +880,7 @@
     "sigma_matrix[:, 3,7 ] = D[:, 2,0]\n",
     "sigma_matrix[:, 3,9 ] = D[:, 3,1]\n",
     "sigma_matrix[:, 3,10] = D[:, 3,0]\n",
+    "\n",
     "sigma_matrix[:, 4,1 ] = D[:, 0,2]\n",
     "sigma_matrix[:, 4,2 ] = D[:, 0,1]\n",
     "sigma_matrix[:, 4,4 ] = D[:, 1,2]\n",
@@ -893,6 +889,7 @@
     "sigma_matrix[:, 4,8 ] = D[:, 2,1]\n",
     "sigma_matrix[:, 4,10] = D[:, 3,2]\n",
     "sigma_matrix[:, 4,11] = D[:, 3,1]\n",
+    "\n",
     "sigma_matrix[:, 5,0 ] = D[:, 0,2]\n",
     "sigma_matrix[:, 5,2 ] = D[:, 0,0]\n",
     "sigma_matrix[:, 5,3 ] = D[:, 1,2]\n",
@@ -908,25 +905,81 @@
     "\n",
     "# Compute the local stiffness matrix for each cell\n",
     "local_stiffness_matrix_ar = volume_ar[:, np.newaxis, np.newaxis] * np.matmul(sigma_matrix_T, np.matmul(constitutive_matrix, sigma_matrix))\n",
-    "\n"
+    "\n",
+    "# Assemble the global stiffness matrix\n",
+    "extended_cell_ar = np.repeat(cell_ar * 3, 3, axis=1) + np.tile(np.arange(3), 4)\n",
+    "\n",
+    "row_id = np.repeat(extended_cell_ar, 12, axis=1).flatten()\n",
+    "col_id = np.tile(extended_cell_ar, 12).flatten()\n",
+    "stiffness_data = local_stiffness_matrix_ar.flatten()\n",
+    "\n",
+    "# Create the sparse global stiffness matrix\n",
+    "global_stiffness_matrix = csc_matrix((stiffness_data, (row_id, col_id)), shape=(n_vertices*3, n_vertices*3))\n",
+    "global_stiffness_matrix.sum_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test that the sigma matrices have been correctly computed\n",
+    "def test_sigma_matrices(sigma_matrix):\n",
+    "\n",
+    "    # Apply a uni-axial stretch to the object\n",
+    "    def_point_ar = point_ar * np.array([2, 1, 1])\n",
+    "    displacement_field_ar = (def_point_ar - point_ar)\n",
+    "\n",
+    "    # Get the displacement of each point of each cell \n",
+    "    cell_displacement_field_ar = displacement_field_ar[cell_ar].reshape(-1, 12, 1)\n",
+    "\n",
+    "    # Compute the strain tensor of each cell\n",
+    "    strain_tensor_ar = np.matmul(sigma_matrix, cell_displacement_field_ar).squeeze()\n",
+    "\n",
+    "    # The correct strain tensor in Voigt notation is [1.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+    "    correct_strain_tensor = np.repeat([[1.0, 0.0, 0.0, 0.0, 0.0, 0.0]], n_cells, axis=0)\n",
+    "\n",
+    "    # Check that the strain tensor is correct\n",
+    "    np.testing.assert_allclose(strain_tensor_ar, correct_strain_tensor, atol=1e-5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(420048,)\n"
+      "0.0 1.0\n",
+      "673076.9230769224 2000000.0\n"
      ]
     }
    ],
    "source": [
-    "print(row_id.shape)\n",
-    "print(local_stiffness_matrix_ar.flatten().shape)"
+    "# Test that the global stiffness matrix has correctly been built\n",
+    "def test_global_stiffness_matrix(global_stiffness_matrix, young_modulus):\n",
+    "\n",
+    "\n",
+    "    # Apply a uni-axial stretch to the object\n",
+    "    def_point_ar = point_ar * np.array([2, 1, 1])\n",
+    "    displacement_field_ar = (def_point_ar - point_ar).flatten()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    computed_strain_energy = 0.5 * np.dot(displacement_field_ar, global_stiffness_matrix.dot(displacement_field_ar))\n",
+    "\n",
+    "    # The strain energy in this case is given by the formula: U =  0.5 * young_modulus * (cross_sectional_area / length) * axial_stretch^2\n",
+    "    # The axial stretch is 2 m, the cross sectional area is 1 m^2, and the length is 1m. The strain energy is therefore 2 Joules\n",
+    "    correct_strain_energy = 0.5 * young_modulus * 1 * 2**2\n",
+    "\n",
+    "    print(computed_strain_energy, correct_strain_energy)\n",
+    "\n",
+    "#test_global_stiffness_matrix(global_stiffness_matrix, young_modulus)"
    ]
   },
   {
