Added tests for the global stifffness matrix

--- a/5_3d_linear_elastic_solid.ipynb
+++ b/5_3d_linear_elastic_solid.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,17 +528,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(140016,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Compute the mass matrix for a reference tetrahedron\n",
     "\n",
@@ -602,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +921,7 @@
     "\n",
     "    # Apply a uni-axial stretch to the object\n",
     "    def_point_ar = point_ar * np.array([2, 1, 1])\n",
-    "    displacement_field_ar = (def_point_ar - point_ar)\n",
+    "    displacement_field_ar = def_point_ar - point_ar\n",
     "\n",
     "    # Get the displacement of each point of each cell \n",
     "    cell_displacement_field_ar = displacement_field_ar[cell_ar].reshape(-1, 12, 1)\n",
@@ -941,45 +933,39 @@
     "    correct_strain_tensor = np.repeat([[1.0, 0.0, 0.0, 0.0, 0.0, 0.0]], n_cells, axis=0)\n",
     "\n",
     "    # Check that the strain tensor is correct\n",
-    "    np.testing.assert_allclose(strain_tensor_ar, correct_strain_tensor, atol=1e-5)\n"
+    "    np.testing.assert_allclose(strain_tensor_ar, correct_strain_tensor, atol=1e-5)\n",
+    "\n",
+    "test_sigma_matrices(sigma_matrix)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0 1.0\n",
-      "673076.9230769224 2000000.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test that the global stiffness matrix has correctly been built\n",
-    "def test_global_stiffness_matrix(global_stiffness_matrix, young_modulus):\n",
-    "\n",
+    "def test_global_stiffness_matrix(local_stiffness_matrix_ar, global_stiffness_matrix):\n",
     "\n",
     "    # Apply a uni-axial stretch to the object\n",
     "    def_point_ar = point_ar * np.array([2, 1, 1])\n",
-    "    displacement_field_ar = (def_point_ar - point_ar).flatten()\n",
+    "    displacement_field_ar = (def_point_ar - point_ar)\n",
     "\n",
+    "    # Get the displacement of each point of each cell \n",
+    "    cell_displacement_field_ar = displacement_field_ar[cell_ar].reshape(-1, 12, 1)\n",
+    "    cell_displacement_field_ar_T = np.transpose(cell_displacement_field_ar, (0, 2, 1))\n",
     "\n",
+    "    # Get the local strain energy \n",
+    "    local_strain_energy = 0.5 * np.matmul(np.matmul(cell_displacement_field_ar_T, local_stiffness_matrix_ar), cell_displacement_field_ar).squeeze()\n",
+    "    total_strain_energy = np.sum(local_strain_energy)\n",
     "\n",
+    "    # Use the global stiffness matrix to compute the strain energy\n",
+    "    computed_strain_energy = 0.5 * np.dot(displacement_field_ar.flatten(), global_stiffness_matrix.dot(displacement_field_ar.flatten()))\n",
     "\n",
+    "    # Check that the strain energy is the same with the local and global stiffness matrices\n",
+    "    np.testing.assert_allclose(total_strain_energy, computed_strain_energy, rtol=1e-6)\n",
     "\n",
-    "    computed_strain_energy = 0.5 * np.dot(displacement_field_ar, global_stiffness_matrix.dot(displacement_field_ar))\n",
-    "\n",
-    "    # The strain energy in this case is given by the formula: U =  0.5 * young_modulus * (cross_sectional_area / length) * axial_stretch^2\n",
-    "    # The axial stretch is 2 m, the cross sectional area is 1 m^2, and the length is 1m. The strain energy is therefore 2 Joules\n",
-    "    correct_strain_energy = 0.5 * young_modulus * 1 * 2**2\n",
-    "\n",
-    "    print(computed_strain_energy, correct_strain_energy)\n",
-    "\n",
-    "#test_global_stiffness_matrix(global_stiffness_matrix, young_modulus)"
+    "test_global_stiffness_matrix(local_stiffness_matrix_ar, global_stiffness_matrix)"
    ]
   },
   {
