--- a/5_3d_linear_elastic_solid.ipynb
+++ b/5_3d_linear_elastic_solid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#Reduce the number of decimals used when printing a numpy array\n",
-    "np.set_printoptions(precision=2)"
+    "np.set_printoptions(precision=2)\n"
    ]
   },
   {
@@ -559,15 +559,14 @@
     "\n",
     "#Compute the determinant of each Jacobian matrix\n",
     "det_jacobian_ar = np.abs(np.linalg.det(jacobian_ar))\n",
-    "\n",
-    "# Now compute the local mass matrix for each cell\n",
+    "!= 0or each cell\n",
     "local_mass_matrix_ar  = np.zeros((n_cells, n_local_basis_fn, n_local_basis_fn))\n",
     "\n",
     "#Compute the local mass matrices\n",
     "for i in range(n_local_basis_fn):\n",
     "    for j in range(i, n_local_basis_fn):\n",
     " \n",
-    "        #Mass matrix\n",
+    "        #body_force matrix\n",
     "        local_mass_matrix_ar[:, i, j] = det_jacobian_ar * M_reference[i, j]\n",
     "        local_mass_matrix_ar[:, j, i] = local_mass_matrix_ar[:, i, j] \n",
     "\n",
@@ -912,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,13 +998,15 @@
     "\n",
     "Since $u(X,t) = N(X) u(t)$, we can write the above equation as:\n",
     "$$\n",
-    "\\int_{\\Omega_{i,0}} \\rho_0 g^T \\cdot u(X,t) \\; d\\Omega_{i,0} = \\rho_0 g^T  \\int_{\\Omega_{i,0}} \n",
+    "\\int_{\\Omega_{i,0}} \\rho_0 g^T \\cdot u(X,t) \\; d\\Omega_{i,0} = \\rho_0 \\underbrace{g^T}_{(1 \\times 12)} \\int_{\\Omega_{i,0}} \n",
     "\\underbrace{\n",
     "\\begin{bmatrix}\n",
-    " & & & \\\\\n",
-    "\\mathrm{I}\\phi_0(X) & \\mathrm{I}\\phi_1(X) & \\mathrm{I}\\phi_2(X) & \\mathrm{I}\\phi_3(X)\\\\\n",
-    " & & & \\\\\n",
-    "\\end{bmatrix}}_{= N(X) \\; (3 \\times 12)}  \\; d\\Omega_{i,0}\n",
+    "\\mathrm{I}\\phi_0(X) & & & \\\\\n",
+    "& \\mathrm{I}\\phi_1(X) & & \\\\\n",
+    "& & \\mathrm{I}\\phi_2(X) & \\\\\n",
+    "& & & \\mathrm{I}\\phi_3(X) \\\\\n",
+    "\\end{bmatrix}}_{=B_\\mathrm{local}(X) \\; (12 \\times 12)} \\; u(t) \\; d\\Omega_{i,0}\n",
+    "\n",
     "\\; \\underbrace{\n",
     "\\begin{bmatrix}\n",
     "\\mid \\\\\n",
@@ -1026,6 +1027,75 @@
     "\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We simply need to construct the global body force matrix (B) by integrating the shape functions in the tetrahedra. \n",
+    "# We again first integrate the shape functions in a reference tetrahedron, and then map them to the actual tetrahedra\n",
+    "\n",
+    "#Integrate the basis functions over the reference tetrahedron\n",
+    "B_reference = np.zeros(n_local_basis_fn)\n",
+    "\n",
+    "for i in range(n_local_basis_fn):\n",
+    "    B_reference[i] = tplquad(\n",
+    "        lambda u, v, w: reference_basis_fn_lst[i](u, v, w), \n",
+    "        0, 1, \n",
+    "        0, lambda u: 1 - u, \n",
+    "        0, lambda u, v: 1 - u - v\n",
+    "    )[0]\n",
+    "        \n",
+    "\n",
+    "# Compute the body force matrix for each tetrahedron cell (n_cells, n_local_basis_fn)\n",
+    "local_body_force_matrix_ar = (density_ar * det_jacobian_ar).reshape(-1,1) @ B_reference.reshape(1,-1)\n",
+    "\n",
+    "\n",
+    "# Assemble the body force matrix\n",
+    "row_id = (np.repeat(cell_ar * 3, 3, axis=1) + np.tile(np.arange(3), 4)).flatten()\n",
+    "col_id = row_id\n",
+    "body_force_data = np.repeat(local_body_force_matrix_ar, 3, axis=1).flatten()\n",
+    "\n",
+    "# Create the sparse global mass matrix\n",
+    "global_body_force_matrix = csc_matrix((body_force_data, (row_id, col_id)), shape=(n_vertices*3, n_vertices*3))\n",
+    "global_body_force_matrix.sum_duplicates()\n",
+    "\n",
+    "# Immediately compute the vector resulting from the multiplication of the gravity force vector and the body force matrix\n",
+    "gravity_force_vector = np.repeat([[0, 0, -9.81]], n_vertices, axis = 0).flatten()\n",
+    "gravity_force_vector_T = gravity_force_vector.reshape(1, -1)\n",
+    "generalized_body_force_vector = (gravity_force_vector_T @ global_body_force_matrix).flatten()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2029\n",
+      "[False False  True False False  True False False  True False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_global_body_force_matrix(generalized_body_force_vector):\n",
+    "\n",
+    "    # Create a uniform displacement field\n",
+    "    displacement_field_ar = np.repeat([[1, 1, 1]], n_vertices, axis=0).flatten()\n",
+    "\n",
+    "    # Compute the work done by the body force\n",
+    "    work_done = np.dot(displacement_field_ar, generalized_body_force_vector)\n",
+    "\n",
+    "    # The solution in this case should be -9.81 Joules\n",
+    "    np.testing.assert_allclose(work_done, -9.81, rtol=1e-6)\n",
+    "\n",
+    "test_global_body_force_matrix(generalized_body_force_vector)"
    ]
   },
   {
