--- a/5_3d_linear_elastic_solid.ipynb
+++ b/5_3d_linear_elastic_solid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,14 +1372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7344/4258375278.py:109: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_11096/4258375278.py:109: RuntimeWarning: invalid value encountered in divide\n",
       "  rotation_axis_ar = rotation_axis_ar / np.linalg.norm(rotation_axis_ar, axis=1)[:, np.newaxis]\n"
      ]
     }
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,17 +1857,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Time integration loop:   8%|▊         | 820/10000 [03:52<57:37,  2.66it/s]  "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compute the time step\n",
     "h_min = np.min(edge_lengths_ar)\n",
@@ -1900,35 +1892,35 @@
     "\n",
     "\n",
     "# Start the main loop\n",
-    "for iter in tqdm(range(n_iterations), desc=\"Time integration loop\", total = n_iterations):\n",
-    "\n",
-    "   # Solve for the acceleration at the next time step\n",
-    "   rhs_vector = -global_mass_matrix.dot(u_n + time_step * v_n + 0.25 * time_step * time_step * a_n)\n",
-    "\n",
-    "   # Remove the rows corresponding to the bottom points\n",
-    "   rhs_vector_with_BC = rhs_vector[~extended_bottom_point_mask]\n",
-    "\n",
-    "   # Solve for the linear system\n",
-    "   a_n_plus_1 = np.zeros(n_vertices * 3)\n",
-    "   a_n_plus_1[~extended_bottom_point_mask] = spsolve(lhs_matrix_with_BC, rhs_vector_with_BC)\n",
-    "\n",
-    "   # Update the velocity and displacement fields\n",
-    "   v_n_plus_1 = v_n + 0.5 * time_step * (a_n + a_n_plus_1)\n",
-    "   u_n_plus_1 = u_n + time_step * v_n + 0.25 * time_step * time_step * (a_n + a_n_plus_1)\n",
-    "\n",
-    "   # Update the acceleration, velocity and displacement fields\n",
-    "   a_n = a_n_plus_1\n",
-    "   v_n = v_n_plus_1\n",
-    "   u_n = u_n_plus_1\n",
-    "\n",
-    "   # Compute the positions of the points in the deformed configuration\n",
-    "   def_point_ar = point_ar + u_n.reshape(-1, 3)\n",
-    "\n",
-    "   # Save the mesh to a file\n",
-    "   if(iter % 10 == 0):\n",
-    "       def_u_grid = convert_mesh_to_ugrid(def_point_ar, cell_ar)\n",
-    "       pv_def_mesh = pv.wrap(def_u_grid)\n",
-    "       pv_def_mesh.save(f\"deformed_mesh_{iter}.vtu\")\n",
+    "#for iter in tqdm(range(n_iterations), desc=\"Time integration loop\", total = n_iterations):\n",
+    "#\n",
+    "#   # Solve for the acceleration at the next time step\n",
+    "#   rhs_vector = -global_mass_matrix.dot(u_n + time_step * v_n + 0.25 * time_step * time_step * a_n)\n",
+    "#\n",
+    "#   # Remove the rows corresponding to the bottom points\n",
+    "#   rhs_vector_with_BC = rhs_vector[~extended_bottom_point_mask]\n",
+    "#\n",
+    "#   # Solve for the linear system\n",
+    "#   a_n_plus_1 = np.zeros(n_vertices * 3)\n",
+    "#   a_n_plus_1[~extended_bottom_point_mask] = spsolve(lhs_matrix_with_BC, rhs_vector_with_BC)\n",
+    "#\n",
+    "#   # Update the velocity and displacement fields\n",
+    "#   v_n_plus_1 = v_n + 0.5 * time_step * (a_n + a_n_plus_1)\n",
+    "#   u_n_plus_1 = u_n + time_step * v_n + 0.25 * time_step * time_step * (a_n + a_n_plus_1)\n",
+    "#\n",
+    "#   # Update the acceleration, velocity and displacement fields\n",
+    "#   a_n = a_n_plus_1\n",
+    "#   v_n = v_n_plus_1\n",
+    "#   u_n = u_n_plus_1\n",
+    "#\n",
+    "#   # Compute the positions of the points in the deformed configuration\n",
+    "#   def_point_ar = point_ar + u_n.reshape(-1, 3)\n",
+    "#\n",
+    "#   # Save the mesh to a file\n",
+    "#   if(iter % 10 == 0):\n",
+    "#       def_u_grid = convert_mesh_to_ugrid(def_point_ar, cell_ar)\n",
+    "#       pv_def_mesh = pv.wrap(def_u_grid)\n",
+    "#       pv_def_mesh.save(f\"deformed_mesh_{iter}.vtu\")\n",
     "\n",
     "    \n",
     "\n"
